--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@
   max-width: 880px;
   display: flex;
 }
-@media (max-width: 800px) {
+@media (max-width: 820px) {
   .profile {
     display: flex;
     flex-flow: column;
@@ -78,7 +78,7 @@
   border-radius: 100%;
   margin-right: 26.25px;
 }
-@media (max-width: 800px) {
+@media (max-width: 820px) {
   .profile__avatar {
     margin: 0 auto;
     margin-bottom: 26px;
@@ -99,7 +99,7 @@
   padding: 0;
   margin: 0;
 }
-@media (max-width: 800px) {
+@media (max-width: 820px) {
   .profile__info-name {
     margin: 0 auto;
   }
@@ -113,6 +113,10 @@
   padding: 0;
   margin: auto 0 auto 18px;
 }
+.profile__edit-button:hover {
+  cursor: pointer;
+  opacity: 50%;
+}
 .profile__info-job {
   font-family: "Inter", Arial, sans-serif;
   color: #ffffff;
@@ -120,7 +124,7 @@
   font-weight: 400;
   line-height: 21.78px;
 }
-@media (max-width: 800px) {
+@media (max-width: 820px) {
   .profile__info-job {
     margin: 0 auto;
     margin-top: 14px;
@@ -134,12 +138,17 @@
   border: 2px solid white;
   margin: auto 0 auto 244px;
 }
-@media (max-width: 800px) {
+.profile__add-button:hover {
+  cursor: pointer;
+  opacity: 50%;
+}
+@media (max-width: 820px) {
   .profile__add-button {
     margin: 0 auto;
     margin-top: 36px;
   }
 }
+
 .elements {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
@@ -157,15 +166,6 @@
   height: 362px;
   width: 282px;
 }
-.element:nth-of-type(4) {
-  margin-top: 20px;
-}
-.element:nth-of-type(5) {
-  margin-top: 20px;
-}
-.element:nth-of-type(6) {
-  margin-top: 20px;
-}
 
 @media (max-width: 780px) {
   .element {
@@ -182,24 +182,37 @@
   width: 282px;
   border-radius: 10px 10px 0px 0px;
 }
+.element__sector {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 246px;
+  max-height: 23px;
+  margin: 25px auto 31px 21px;
+}
 .element__title {
   font-family: "Inter", Arial, sans-serif;
   font-size: 24px;
   line-height: 29px;
   font-weight: 900;
-  margin-left: 21px;
+
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  text-align: left;
 }
 .element__like {
   margin: 0;
   padding: 0;
-  background-color: #000000;
+  background-image: url(images/like.svg);
+  background-color: transparent;
+  min-width: 22px;
+  height: 19px;
+  border: none;
 }
 .element__like:hover {
-}
-.element__like-active {
+  opacity: 50%;
+  cursor: pointer;
 }
 .footer {
   width: 318px;
@@ -222,27 +235,165 @@
   color: #545454;
 }
 .popup {
+  width: 100%;
+  height: 100%;
   display: none;
-}
-.popup_opened {
-  display: block;
-}
-.popup__container {
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
   position: fixed;
-  z-index: 2;
   left: 0;
   top: 0;
-  width: 430px;
+}
+.popup_opened {
+  display: flex;
+}
+.popup__container {
+  width: 100%;
+  max-width: 430px;
   height: 330px;
-  overflow: auto;
-  margin: 0 auto;
+  background-color: #ffffff;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: #ffffff;
+  position: relative;
+}
+@media (max-width: 460px) {
+  .popup__container {
+    width: 282px;
+    height: 322px;
+  }
+}
+.popup__close-button {
+  background-image: url(images/Close\ Icon.svg);
+  background-size: contain;
+  border: none;
+  width: 32px;
+  height: 32px;
+  background-color: transparent;
+  padding: 0;
+  margin-bottom: 8px;
+  position: absolute;
+  top: -40px;
+  right: -40px;
+  z-index: 10;
+}
+
+.popup__close-button:hover {
+  opacity: 50%;
+  cursor: pointer;
+}
+@media (max-width: 460px) {
+  .popup__close-button {
+    width: 20px;
+    height: 20px;
+    margin-bottom: 16px;
+    right: 0;
+  }
+}
+
+.popup__title {
+  font-family: "Inter", Arial, sans-serif;
+  font-size: 24px;
+  font-weight: 900;
+  line-height: 29px;
+  letter-spacing: 0em;
+  text-align: left;
+  width: 330px;
+  margin: 34px 64px 54px 36px;
+  padding: 0;
+}
+@media (max-width: 460px) {
+  .popup__title {
+    width: 238px;
+    margin: 0 auto;
+    font-size: 18px;
+    line-height: 22px;
+    margin-top: 25px;
+  }
+}
+.popup__form {
+  margin: 0 auto;
+  padding: 0;
+}
+.popup__form_type_profile {
+  width: 298px;
+  height: 114px;
+  margin: 0 auto;
+  margin-left: 36px;
+}
+@media (max-width: 460px) {
+  .popup__form_type_profile {
+    width: 238px;
+    margin-left: 22px;
+    margin-top: 75px;
+    margin-bottom: 45px;
+  }
+}
+.popup__name-info {
+  font-family: "Inter", Arial, sans-serif;
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 1);
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 358px;
+  height: 27px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  padding: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+@media (max-width: 460px) {
+  .popup__name-info {
+    width: 238px;
+  }
+}
+.popup__job-info {
+  font-family: "Inter", Arial, sans-serif;
+  border-bottom: none;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 358px;
+  height: 27px;
+  margin: 0 auto;
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 1);
+  margin-bottom: 48px;
+  padding: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+@media (max-width: 460px) {
+  .popup__job-info {
+    width: 238px;
+    margin-bottom: 45px;
+  }
 }
 .popup__save-button {
-  background-image: url(./images/Submit\ Button.png);
+  font-family: "Inter", Arial, sans-serif;
   color: white;
+  background-color: black;
+  width: 358px;
+  height: 50px;
+
+  padding: 0;
+}
+.popup__save-button:hover {
+  cursor: pointer;
+  opacity: 50%;
+}
+@media (max-width: 460px) {
+  .popup__save-button {
+    width: 238px;
+  }
 }
