--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,18 +1,20 @@
 .profile__add-button {
   height: 50px;
   width: 150px;
-  background-image: url(../../../images/Add\ Button.png);
+  background-image: url(../../../images/Add\ Button.svg);
   background-color: #000000;
-  border: 2px solid white;
   margin: auto 0 auto 244px;
+  border: none;
 }
 .profile__add-button:hover {
   cursor: pointer;
-  opacity: 50%;
+  opacity: 0.8;
 }
 @media (max-width: 820px) {
   .profile__add-button {
     margin: 0 auto;
     margin-top: 36px;
+    width: 282px;
+    background-image: url(../../../images/Add\ Buttonbig.svg);
   }
 }
