--- a/blocks/footer/__description/footer__description.css
+++ b/blocks/footer/__description/footer__description.css
@@ -7,3 +7,9 @@
   text-align: left;
   color: #545454;
 }
+@media (max-width: 400px) {
+  .footer__description {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
