--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -4,15 +4,22 @@
   background-color: black;
   width: 358px;
   height: 50px;
-
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: center;
   padding: 0;
+  border: none;
 }
 .popup__save-button:hover {
   cursor: pointer;
-  opacity: 50%;
+  opacity: 0.8;
 }
 @media (max-width: 460px) {
   .popup__save-button {
     width: 238px;
+    font-size: 14px;
+    line-height: 17px;
   }
 }
