--- a/blocks/profile/__info-name/profile__info-name.css
+++ b/blocks/profile/__info-name/profile__info-name.css
@@ -6,9 +6,14 @@
   line-height: 48px;
   padding: 0;
   margin: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 @media (max-width: 820px) {
   .profile__info-name {
-    margin: 0 auto;
+    font-size: 27px;
+    line-height: 33px;
+    letter-spacing: 0em;
+    text-align: center;
   }
 }
