--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,6 +1,15 @@
 .profile__info {
   width: 336px;
-  height: 73px;
   display: flex;
   flex-wrap: wrap;
+  margin-top: 22px;
+}
+@media (max-width: 820px) {
+  .profile__info {
+    width: 282px;
+    margin: 0 auto;
+    margin-top: 26px;
+    padding: 0;
+    justify-content: center;
+  }
 }
