style: исправлены ошибки после второго ревью

--- a/blocks/footer/__description/footer__description.css
+++ b/blocks/footer/__description/footer__description.css
@@ -6,6 +6,8 @@
   letter-spacing: 0em;
   text-align: left;
   color: #545454;
+  padding: 0;
+  margin: 0;
 }
 @media (max-width: 400px) {
   .footer__description {
