--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,8 +4,7 @@
 }
 @media (max-width: 1024px) {
   .footer {
-    width: 318px;
-    margin: 66px auto 60px 50px;
+    margin-left: 50px;
   }
 }
 @media (max-width: 480px) {
@@ -13,5 +12,6 @@
     margin: 0 auto;
     margin-top: 48px;
     width: 282px;
+    margin-bottom: 36px;
   }
 }
