--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -14,14 +14,13 @@
 }
 
 .popup__close-button:hover {
-  opacity: 50%;
+  opacity: 0.6;
   cursor: pointer;
 }
 @media (max-width: 530px) {
   .popup__close-button {
     width: 20px;
     height: 20px;
-    margin-bottom: 16px;
     right: 0;
   }
 }
