--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -3,12 +3,12 @@
   width: 150px;
   background-image: url(../../../images/Add\ Button.svg);
   background-color: #000000;
-  margin: auto 0 auto 244px;
+  margin: auto 20px auto auto;
   border: none;
 }
 .profile__add-button:hover {
   cursor: pointer;
-  opacity: 0.8;
+  opacity: 0.6;
 }
 @media (max-width: 820px) {
   .profile__add-button {
