--- a/blocks/profile/__info-name/profile__info-name.css
+++ b/blocks/profile/__info-name/profile__info-name.css
@@ -7,6 +7,7 @@
   padding: 0;
   margin: 0;
   text-overflow: ellipsis;
+  white-space: nowrap;
   overflow: hidden;
 }
 @media (max-width: 820px) {
@@ -15,5 +16,10 @@
     line-height: 33px;
     letter-spacing: 0em;
     text-align: center;
+  }
+}
+@media (max-width: 320px) {
+  .profile__info-name {
+    margin-left: 33px;
   }
 }
