style: исправлены визуальные ошибки на 320

--- a/blocks/profile/__info-name/profile__info-name.css
+++ b/blocks/profile/__info-name/profile__info-name.css
@@ -9,6 +9,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  width: 294px;
 }
 @media (max-width: 820px) {
   .profile__info-name {
@@ -21,5 +22,6 @@
 @media (max-width: 320px) {
   .profile__info-name {
     margin-left: 33px;
+    width: 189px;
   }
 }
