--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,9 +1,8 @@
 .popup__form {
-  width: 298px;
-  height: 114px;
-  margin: 0 auto;
-  margin-left: 36px;
+  margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
 }
 @media (max-width: 460px) {
   .popup__form {
