--- a/blocks/popup/__error/popup__error.css
+++ b/blocks/popup/__error/popup__error.css
@@ -1,4 +1,4 @@
-.popup__error_visible {
+.popup__error {
   font-family: "Inter", Arial, sans-serif;
   color: #f00;
   font-size: 12px;
@@ -10,11 +10,11 @@
   height: 30px;
   padding: 0;
 }
-.popup__error_visible:last-of-type {
+.popup__error:last-of-type {
   margin-top: -43px;
 }
 @media (max-width: 540px) {
-  .popup__error_visible {
+  .popup__error {
     max-width: 238px;
   }
 }
